# op3

./: LICENSE  README.md
OP3/: .coveragerc  README.rst  pyproject.toml  setup.py
OP3/op3/: __init__.py  decoders.py  encoders.py  messages.py  parser.py  payload_types.py
OP3/pip-wheel-metadata/OP3.dist-info/: LICENSE-MIT  METADATA  top_level.txt
OP3/tests/: test_decode.py  test_encode.py  test_messages.py  test_payload.py
