[metadata]
name = 'OP3'
version = '0.0.1'
description = 'an OpenSoundControl implementation for Python 3'
author = 'Jasmijn Wellner'
author_email = 'gyvox.public@gmail.com'
license = 'MIT'
url = 'https://github.com/_/OP3'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
